--- a/tutorial/Step3/MathFunctions/CMakeLists.txt
+++ b/tutorial/Step3/MathFunctions/CMakeLists.txt
@@ -15,7 +15,7 @@ if (USE_MYMATH)
 
   # TODO 6: Link SqrtLibrary to tutorial_compiler_flags
 
-  target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
+  target_link_libraries(MathFunctions PRIVATE SqrtLibrary tutorial_compiler_flags)
 endif()
 
 # TODO 7: Link MathFunctions to tutorial_compiler_flags
